--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
- "name": "TeleBot - UserBot",
- "description": "An advanced Telethon Userbot, from @TeleBotSupport",
- "logo": "https://telegra.ph/file/0b1d5cb8deeec7a506154.jpg",
+ "name": "My BOT VINZET",
+ "description": "",
+ "logo": "https: ",
  "keywords": [
   "telegram",
   "userbot",
@@ -9,8 +9,8 @@
   "modular",
   "productivity"
  ],
- "repository": "https://github.com/xditya/TeleBot/",
- "website": "https://xditya.gitbook.io/telebot/",
+ "repository": "https://github.com/ronaldyganteng/TeleBot/",
+ "website": "",
  "success_url": "https://t.me/TeleBotHelp/13",
  "stack": "container",
  "env": {
@@ -121,7 +121,7 @@
   },  
   "MAX_SPAM": {
    "description": "Number of messages one can send in your PM before being approved. By default, it is 3.",
-   "value": "3",
+   "value": "4",
    "required": false
   },
   "OCR_SPACE_API_KEY": {
@@ -146,14 +146,14 @@
   },
   "TZ": {
    "description": "Required for Correct Time on autopic/get time. Know your timezone from http://www.timezoneconverter.com/cgi-bin/findzone.tzc",
-   "value": "Asia/Kolkata",
+   "value": "Asia/Jakarta",
    "required": false
   }
  },
  "addons": [{
   "plan": "heroku-postgresql",
   "options": {
-   "version": "12"
+   "version": "13"
   }
  }]
 }
